<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_8dp"
    app:cardCornerRadius="@dimen/dimen_12dp"
    app:cardElevation="@dimen/dimen_2dp"
    app:strokeColor="@color/card_stroke"
    app:strokeWidth="@dimen/dimen_1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16dp">

        <TextView
            android:id="@+id/tvQuestionNumber"
            style="@style/Text.Bold.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_question_number"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:paddingBottom="@dimen/dimen_5dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/q1" />

        <TextView
            android:id="@+id/tvCategory"
            style="@style/Text.Regular.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_category"
            android:paddingStart="@dimen/dimen_12dp"
            android:paddingTop="@dimen/dimen_4dp"
            android:paddingEnd="@dimen/dimen_12dp"
            android:paddingBottom="@dimen/dimen_4dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/category" />

        <TextView
            android:id="@+id/tvQuestion"
            style="@style/Text.Bold.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestionNumber"
            tools:text="@string/question" />

        <RadioGroup
            android:id="@+id/rgOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion">

            <RadioButton
                android:id="@+id/rbOption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RadioButtonStyle"
                tools:text="@string/option" />

            <RadioButton
                android:id="@+id/rbOption2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                style="@style/RadioButtonStyle"
                tools:text="@string/option" />

            <RadioButton
                android:id="@+id/rbOption3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                style="@style/RadioButtonStyle"
                tools:text="@string/option" />

            <RadioButton
                android:id="@+id/rbOption4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                style="@style/RadioButtonStyle"
                tools:text="@string/option" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>